--- a/TPAPANACEA/ActivitySwitcher.xaml
+++ b/TPAPANACEA/ActivitySwitcher.xaml
@@ -14,7 +14,7 @@
     <Grid>
         <my:ContentControl HorizontalAlignment="Stretch" Margin="0,39,0,34" x:Name="content" />
         <Rectangle Fill="#8bc7ea" Stroke="#8bc7ea" VerticalAlignment="Bottom" Height="34"/>
-        <TextBlock Margin="8,0,207.5,8" VerticalAlignment="Bottom" Name="txtBlockStatus" Height="17" Text="© Copyright Company Inc. All rights reserved." TextWrapping="Wrap" FontWeight="Bold" FontSize="10.667" Foreground="#FF2179AF"/>
+        <TextBlock Margin="8,0,207.5,8" VerticalAlignment="Bottom" Name="txtBlockStatus" Height="17" TextWrapping="Wrap" FontWeight="Bold" FontSize="10.667" Foreground="#FF2179AF"/>
         <Button HorizontalAlignment="Right" Name="btnClose"  Margin="0,4,5,0" VerticalAlignment="Top" Width="34" BorderBrush="Transparent" Background="Transparent" Height="34" Click="btnClose_Click">
             <Image Width="30" Height="30" Source="Templates/Images/close.png" Stretch="Fill"/>
         </Button>
@@ -37,7 +37,7 @@
             <Image Width="30" Height="30" Source="Templates/Images/min.png" Stretch="Fill"/>
         </Button>
         <TextBlock Margin="8,8,361,0" Name="txtBlockAppTitle" VerticalAlignment="Top" Height="28" Text="Path Abroad Solutions" TextWrapping="Wrap" FontWeight="Bold" FontSize="16.667" Foreground="#FF2179AF"/>
-        <TextBlock Margin="0,5,234,0" HorizontalAlignment="Right" Name="txtBlockLoginInfo" TextAlignment="Left"  VerticalAlignment="Top" Height="28" Text="{Binding LoginInfo}"  Visibility="Visible"  TextWrapping="Wrap" FontSize="16.667" Foreground="#FF2179AF"/>
+        <TextBlock HorizontalAlignment="Center" Margin="0,7,0,0" Name="txtBlockLoginInfo" TextAlignment="Left"  VerticalAlignment="Top" Height="28" Text="{Binding LoginInfo}"  Visibility="Visible"  TextWrapping="Wrap" FontSize="16.667" Foreground="#FF2179AF"/>
 
     </Grid>
 </Window>
