--- a/TPAPANACEA/Templates/Writing/WriteEssay.xaml
+++ b/TPAPANACEA/Templates/Writing/WriteEssay.xaml
@@ -14,7 +14,7 @@
         <my1:PreviousNext x:Name="prevNext" HorizontalAlignment="Stretch" VerticalAlignment="Bottom" Grid.Row="1" />
         <my1:BreadCrumb HorizontalAlignment="Stretch" x:Name="breadCrumb" VerticalAlignment="Top" Width="Auto" Height="Auto" />
         <TextBlock Height="Auto" HorizontalAlignment="Stretch" Margin="40,35,40,0" Name="txtBlkInstruction" Text="Instruction goes here" VerticalAlignment="Top" FontWeight="Bold" FontSize="14" TextWrapping="Wrap" />
-        <TextBlock Height="Auto" HorizontalAlignment="Stretch" VerticalAlignment="Stretch" TextWrapping="Wrap" Margin="40,100,100,257" Name="txtBlkText" Text="Content goes here" FontSize="14" Grid.RowSpan="2" />
+        <TextBlock HorizontalAlignment="Stretch" VerticalAlignment="Stretch" TextWrapping="Wrap" Margin="40,100,40,391" Name="txtBlkText" Text="Content goes here" FontSize="14" Grid.RowSpan="2" />
         <Label FontWeight="Bold" Content="Total Word Count" Grid.Row="1" Height="25" HorizontalAlignment="Stretch" Margin="40,0,10,62" Name="lblWordCount" VerticalAlignment="Bottom" />
     </Grid>
 </UserControl>
