--- a/TPAPANACEA/Templates/Common/ReportViewer.xaml
+++ b/TPAPANACEA/Templates/Common/ReportViewer.xaml
@@ -2,7 +2,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:c="clr-namespace:CodeReason.Reports.Controls;assembly=CodeReason.Reports"
-    Title="CodeReason Reports - Chart Report" Height="600" Width="600" WindowState="Maximized" Activated="Window_Activated">
+    Title="Analysis report" Height="600" Width="600" WindowState="Maximized" Activated="Window_Activated">
     <Grid>
         <c:BusyDecorator Name="busyDecorator" IsBusyIndicatorHidden="False">
             <DocumentViewer Name="documentViewer" />
