--- a/TPAPANACEA/Templates/Common/HomePanacia.xaml
+++ b/TPAPANACEA/Templates/Common/HomePanacia.xaml
@@ -4,11 +4,11 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
-             d:DesignHeight="570" d:DesignWidth="600">
-    <Grid Height="440" VerticalAlignment="Top">
-        <Button x:Name="btnPractice" Content="Practice" HorizontalAlignment="Left" Margin="12,12,0,0" VerticalAlignment="Top" Width="576" Height="140" Click="btnPractice_Click" Background="#FF00609C" BorderBrush="#FF00609C" Foreground="#FF8BC7EA" FontSize="24" FontWeight="Bold"/>
-        <Button x:Name="btnMock" Content="Mock" HorizontalAlignment="Left" Margin="12,290,0,10" VerticalAlignment="Center" Width="576" Height="140" Click="btnMock_Click" Background="#FF00609C" BorderBrush="#FF00609C" Foreground="#FF8BC7EA" FontSize="24" FontWeight="Bold"/>
-        <Button x:Name="btnAnswerKey" Content="Answer key" HorizontalAlignment="Left" Margin="12,0,0,155" VerticalAlignment="Bottom" Width="576" Height="128" Click="btnAnswerKey_Click" Background="#FF00609C" BorderBrush="#FF00609C" Foreground="#FF8BC7EA" FontSize="24" FontWeight="Bold"/>
-        <Button x:Name="btnMockAnswerKey" Content="Mock answer key" HorizontalAlignment="Left" Margin="12,0,0,-123" VerticalAlignment="Bottom" Width="576" Height="128" Click="btnMockAnswerKey_Click" Background="#FF00609C" BorderBrush="#FF00609C" Foreground="#FF8BC7EA" FontSize="24" FontWeight="Bold"/>
+             d:DesignHeight="308" d:DesignWidth="600">
+    <Grid Height="308" VerticalAlignment="Top">
+        <Button x:Name="btnPractice" Visibility="Collapsed" Content="Practice" HorizontalAlignment="Left" Margin="12,12,0,0" VerticalAlignment="Top" Width="576" Height="140" Click="btnPractice_Click" Background="#FF00609C" BorderBrush="#FF00609C" Foreground="#FF8BC7EA" FontSize="24" FontWeight="Bold"/>
+        <Button x:Name="btnMock" Content="Mock" HorizontalAlignment="Left" Margin="12,16,0,164" VerticalAlignment="Top" Width="576" Height="128" Click="btnMock_Click" Background="#FF00609C" BorderBrush="#FF00609C" Foreground="#FF8BC7EA" FontSize="24" FontWeight="Bold"/>
+        <Button x:Name="btnAnswerKey" Visibility="Collapsed" Content="Answer key" HorizontalAlignment="Left" Margin="12,0,0,155" VerticalAlignment="Bottom" Width="576" Height="128" Click="btnAnswerKey_Click" Background="#FF00609C" BorderBrush="#FF00609C" Foreground="#FF8BC7EA" FontSize="24" FontWeight="Bold"/>
+        <Button x:Name="btnMockAnswerKey" Content="Mock answer key" HorizontalAlignment="Left" Margin="12,0,0,20" VerticalAlignment="Bottom" Width="576" Height="130" Click="btnMockAnswerKey_Click" Background="#FF00609C" BorderBrush="#FF00609C" Foreground="#FF8BC7EA" FontSize="24" FontWeight="Bold"/>
     </Grid>
 </UserControl>
